# fastapi-zero

./: .gitignore  README.md  database.db  pyproject.toml
docs/: ip_local.py
fastapi_zero/: app.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.md  auth.py  html.py  root.py  todo.py  users.py
migrations/versions/: 066d1688dd9d_add_created_at_and_updated_at_in_table_.py  0aeb75e96025_create_table_todo.py  410e0f095bcb_add_server_default_in_column_created_at_.py  bca52788c814_change_server_default_to_default_in_.py  d91abd187cd5_create_users_table.py  dc41f2881fd8_add_column_created_at_in_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_html.py  test_models.py  test_security.py  test_todo.py  test_todos.py  test_users.py
