[project]
name = "fastapi-zero"
version = "0.1.0"
description = "Curso do Dunossauro de FastApi Sincrono!"
authors = [
    {name = "Antonio Henrique Machado"}
]
readme = "README.md"
requires-python = ">=3.12, <=3.13.1"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev fastapi_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_zero -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



