[tool.poetry]
name = "fastapi-zero"
version = "0.1.0"
description = "Curso do Dunossauro de FastApi Sincrono!"
authors = ["Antonio Henrique Machado"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.*, <=3.13.*"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ipykernel = "^6.29.5"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev fastapi_zero/app.py'
run_host = 'fastapi dev fastapi_zero/app.py --host 0.0.0.0'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_zero -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
